Fix spacing

--- a/src_editor/app.css
+++ b/src_editor/app.css
@@ -43,7 +43,7 @@ body {
 }
 
 .widget__error-content {
-  padding-left: 6px;
+  padding-left: 10px;
   white-space: pre;
 }
 
